<resources>
    <string name="app_name">Popular Movies</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="movie_poster">Movie Poster</string>
    <string name="title">Oops! Sorry!</string>
    <string name="error_message">There was an error. Please try again.</string>
    <string name="network_unavailable">Network is unavailable!</string>
    <string name="website_label">Website:</string>
    <string name="overview_label">Overview:</string>
    <string name="trailer_thumbnail">Trailer Thumbnail</string>
    <string name="action_popular">Most Popular</string>
    <string name="action_highest_rated">Highest Rated</string>
    <string name="action_favorite">Favorite</string>
    <string name="trailers_label">Trailers:</string>
    <string name="reviews_label">Reviews:</string>
    <string name="movie_icon">Movie Icon</string>
    <string name="release_date_label">Release date:</string>
    <string name="rating_label">Rating:</string>
    <string name="highest_rating">/10</string>
    <string name="add_to_favorite">Add To Favorites</string>
    <string name="delete_from_favorite">Delete From Favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
