<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/movie_detail"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/text_margin"
    tools:context=".ui.DetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp">

        <ImageView
            android:id="@+id/movie_poster"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/movie_poster"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/movie_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/movie_poster"
            android:layout_toRightOf="@id/movie_poster"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="8dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/movie_date_status_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_title_label"
            android:layout_toEndOf="@id/movie_poster"
            android:layout_toRightOf="@id/movie_poster"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="4dp"
            android:text="@string/release_date_label"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/movie_date_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_title_label"
            android:layout_toEndOf="@id/movie_date_status_label"
            android:layout_toRightOf="@id/movie_date_status_label"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/movie_rating_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_date_status"
            android:layout_toEndOf="@id/movie_poster"
            android:layout_toRightOf="@id/movie_poster"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:paddingRight="4dp"
            android:text="@string/rating_label"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

        <TextView
            android:id="@+id/movie_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/movie_date_status"
            android:layout_toEndOf="@id/movie_rating_label"
            android:layout_toRightOf="@id/movie_rating_label"
            android:paddingBottom="8dp"
            android:textAppearance="?android:attr/textAppearanceSmall"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#20000000"
        android:padding="8dp"/>

    <Button
        android:id="@+id/add_to_favorite_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="#20000000"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="16dp"
        android:text="@string/overview_label"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/movie_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="16dp"
        android:paddingTop="4dp"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#20000000"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/trailers_label"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/trailer_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="#20000000"
        android:padding="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="16dp"
        android:text="@string/reviews_label"
        android:textStyle="bold"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/review_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>
